cmake_minimum_required(VERSION 3.26)
project(Cloudflare-App)
#find_package(libconfig++ REQUIRED)
find_package(CURL REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP REQUIRED jsoncpp)
add_executable(cloudflare cloudflare.cxx config.cxx)
target_include_directories(cloudflare PRIVATE ${JSONCPP_INCLUDEDIR})
target_link_libraries(cloudflare ${LIBCONFIG++_LIBRARIES} ${CURL_LIBRARIES} ${JSONCPP_LIBRARIES})
