cmake_minimum_required(VERSION 3.26)
project(Cloudflare-App)
#find_package(libconfig++ REQUIRED)
find_package(CURL REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP REQUIRED jsoncpp)
set(CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "ON")
add_compile_options(-march=native -flto -O2 -ftree-vectorize)
add_executable(cloudflare cloudflare.cxx config.cxx mycurl.cxx)
target_include_directories(cloudflare PRIVATE ${JSONCPP_INCLUDEDIR})
target_link_libraries(cloudflare ${LIBCONFIG++_LIBRARIES} ${CURL_LIBRARIES} ${JSONCPP_LIBRARIES})
