cmake_minimum_required(VERSION 3.26)
project(Cloudflare-DDNS)
find_package(CURL REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP REQUIRED jsoncpp)
set(CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "ON")
if(NOT CMAKE_CXX_FLAGS)
    set(CMAKE_CXX_FLAGS "-march=native -flto -O2 -ftree-vectorize")
endif()
add_executable(cloudflare-ddns cloudflare.cxx config.cxx mycurl.cxx getip.cxx)
target_include_directories(cloudflare-ddns PRIVATE ${JSONCPP_INCLUDEDIR})
target_link_libraries(cloudflare-ddns ${CURL_LIBRARIES} ${JSONCPP_LIBRARIES})
